Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76611

qqmlrefcount_p.h:116:28: warning: ‘T QBasicAtomicInteger<T>::load() const [with T = int]’ is deprecated: Use loadRelaxed [-Wdeprecated-declarations]

XMLWordPrintable

    • Android, iOS/tvOS/watchOS, Linux/Other display system, QNX, WinRT
    • c060f6e765a2f155b38158f2ed73eac4aad37e02

      https://codereview.qt-project.org/c/qt/qt5/+/266032 Update submodules on 'dev' in qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1561380449

      https://testresults.qt.io/coin/api/results/qt/qtdeclarative/69f7b1a5e4490e8360c4a37c201281decc54dbe3/LinuxUbuntu_18_04x86_64LinuxQEMUarm64GCCqtci-linux-Ubuntu-18.04-x86_64-a48fa6/5eb8986978df1ff00ddf5974184eb9fd840b012b/build_1561381272/log.txt.gz

      agent:2019/06/24 12:19:45 build.go:207: In file included from /home/qt/work/install/include/QtCore/QtCore:4:0,
      agent:2019/06/24 12:19:45 build.go:207:                  from ../../include/QtQml/QtQmlDepends:3:
      agent:2019/06/24 12:19:45 build.go:207: ../../include/QtQml/5.14.0/QtQml/private/../../../../../src/qml/qml/ftw/qqmlrefcount_p.h: In destructor ‘virtual QQmlRefCount::~QQmlRefCount()’:
      agent:2019/06/24 12:19:45 build.go:207: ../../include/QtQml/5.14.0/QtQml/private/../../../../../src/qml/qml/ftw/qqmlrefcount_p.h:116:28: warning: ‘T QBasicAtomicInteger<T>::load() const [with T = int]’ is deprecated: Use loadRelaxed [-Wdeprecated-declarations]
      agent:2019/06/24 12:19:45 build.go:207:      Q_ASSERT(refCount.load() == 0);
      agent:2019/06/24 12:19:45 build.go:207:                             ^
      agent:2019/06/24 12:19:45 build.go:207: /home/qt/work/install/include/QtCore/qglobal.h:838:56: note: in definition of macro ‘Q_ASSERT’
      agent:2019/06/24 12:19:45 build.go:207:  #    define Q_ASSERT(cond) static_cast<void>(false && (cond))
      agent:2019/06/24 12:19:45 build.go:207:                                                         ^~~~
      agent:2019/06/24 12:19:45 build.go:207: In file included from /home/qt/work/install/include/QtCore/qatomic.h:46:0,
      agent:2019/06/24 12:19:45 build.go:207:                  from /home/qt/work/install/include/QtCore/qglobal.h:1268,
      agent:2019/06/24 12:19:45 build.go:207:                  from /home/qt/work/install/include/QtCore/QtCore:4,
      agent:2019/06/24 12:19:45 build.go:207:                  from ../../include/QtQml/QtQmlDepends:3:
      agent:2019/06/24 12:19:45 build.go:207: /home/qt/work/install/include/QtCore/qbasicatomic.h:103:55: note: declared here
      agent:2019/06/24 12:19:45 build.go:207:      QT_DEPRECATED_VERSION_X_5_14("Use loadRelaxed") T load() const noexcept { return loadRelaxed(); }
      agent:2019/06/24 12:19:45 build.go:207:                                                        ^~~~
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes