Port away from QAtomicOps::load / store

Use loadRelaxed / storeRelaxed instead. load() / store() are
about to be removed from our private APIs.

Task-number: QTBUG-76611
Change-Id: I3bebbd1cde7e53d7e2451f2373db1232b595a1d0
Reviewed-by: Liang Qi <liang.qi@qt.io>